--- a/yoloWorld_detectSeg_frontend/index.html
+++ b/yoloWorld_detectSeg_frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="http://127.0.0.1:3333/favicon.ico" />
+    <link rel="icon" href="http://localhost:3333/favicon.ico" />
     <!--    <link rel="icon" href="/favicon.ico" />-->
     <link rel="stylesheet" href="/app-loading.css" />
     <title>视觉人工智能任务平台</title>
